argocd/manifests/torrent/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: transmission
  namespace: torrent
spec:
  selector:
    app: transmission
  ports:
    - name: web
      port: 9091
      targetPort: 9091
    - name: metrics
      port: 19091
      targetPort: 19091
