argocd/manifests/torrent/ingress-tailscale.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission-tailscale
  namespace: torrent
  annotations:
    tailscale.com/proxy-class: "default"
    hajimari.io/enable: "true"
    hajimari.io/url: "https://torrent.ops.eblu.me"
    hajimari.io/icon: "mdi:download"
    hajimari.io/appName: "Transmission"
    hajimari.io/group: "Apps"
    hajimari.io/info: "Torrent client"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: transmission
      port:
        number: 9091
  tls:
    - hosts:
        - torrent
